samples/_failures_safe/1761145779_6dfeb2_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_c95aa6ab.c: In function ‘main’:
./samples/SAFE/__tmp_c95aa6ab.c:148:61: error: ‘level’ undeclared (first use in this function)
  148 |                 printf("%s [%-8s] %s\n", logs[i].timestamp, level
      |                                                             ^~~~~
./samples/SAFE/__tmp_c95aa6ab.c:148:61: note: each undeclared identifier is reported only once for each function it appears in
./samples/SAFE/__tmp_c95aa6ab.c:148:66: error: expected ‘)’ at end of input
  148 |                 printf("%s [%-8s] %s\n", logs[i].timestamp, level
      |                       ~                                          ^
      |                                                                  )
./samples/SAFE/__tmp_c95aa6ab.c:148:17: error: expected declaration or statement at end of input
  148 |                 printf("%s [%-8s] %s\n", logs[i].timestamp, level
      |                 ^~~~~~
./samples/SAFE/__tmp_c95aa6ab.c:148:17: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_c95aa6ab.c:148:17: error: expected declaration or statement at end of input
